@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2011, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2011, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -189,7 +189,7 @@ public final class DumpRenderTree {
     private static void mlog(String msg) {
         if (log.isLoggable(Level.FINE)) {
             log.fine("PID:" + Long.toHexString(PID)
-                    + " TID:" + Thread.currentThread().getId()
+                    + " TID:" + Thread.currentThread().threadId()
                         + "(" + Thread.currentThread().getName() + ") "
                     + msg);
         }
